# resource-agents

./: .editorconfig  .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  AUTHORS  COPYRIGHT  ChangeLog  GNUmakefile  Makefile  Makefile.am  README  README.licence  README.md  autogen.sh  configure  configure.ac  configure.in  resource-agents.pc.in  resource-agents.spec  resource-agents.spec.in
cs-deploy-tool/: Makefile.am  TODO  autogen.sh  configure.in  cs-deploy-tool.desktop.in  cs-deploy-tool.spec.in
cs-deploy-tool/docs/: Makefile.am
cs-deploy-tool/docs/html/: index.html
cs-deploy-tool/src/: IPAddrEntry.py  Makefile.am  ads_base.py  ads_utils.py  authorize_to_node  cluster_installer.py  cluster_ops.py  constants.py  cs-deploy-tool  environment.py  err.py  execute.py  fence_base.py  fence_builder.glade  fence_builder.py  main_win.glade  main_win.py  module_parser.py  resource_ip.py  rpm_installer.py  storage.py  storage_config.py  unauthorize_to_node
cs-deploy-tool/src/ADSs/: __init__.py  ads_apache.py  ads_example.py  ads_generic.glade  ads_generic.py  ads_nfsd.py
cs-deploy-tool/src/fences/: __init__.py  fence_apc.py  fence_bladecenter.py  fence_drac.py  fence_ilo.py  fence_ipmilan.py  fence_manual.py  fence_none.py  fence_wti.py  fences.glade
doc/man/: Makefile.am  mkappendix.sh  ra2refentry.xsl  ralist.sh
gfs2/libgfs2/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  bitmap.c  block_list.c  buf.c  config.h.in  configure  configure.ac  device_geometry.c  fs_bits.c  fs_geometry.c  fs_ops.c  gfs1.c  gfs2_disk_hash.h  gfs2_log.c  iddev.c  libgfs2.h  libtool  locking.c  misc.c  ondisk.c  ondisk.h  recovery.c  rgrp.c  size.c  structures.c  super.c
heartbeat/: .cvsignore  .ocf-binaries.in  .ocf-directories.in  .ocf-shellfuncs.in  AoEtarget  AoEtarget.in  AudibleAlarm  AudibleAlarm.in  AzEvents  AzEvents.in  Bird  CTDB  CTDB.in  ClusterMon  ClusterMon.in  Delay  Delay.in  Dummy  Dummy.in  EvmsSCC  EvmsSCC.in  Evmsd  Evmsd.in  Filesystem  Filesystem.in  ICP  ICP.in  IPaddr  IPaddr.in  IPaddr2  IPaddr2.in  IPalias  IPjail  IPsrcaddr  IPsrcaddr.in  IPv6addr.c  IPv6addr2  IPv6addrLO  IPv6addr_utils.c  Iface-Bridge  (+262 more)
ldirectord/: Makefile.am  ldirectord.cf  ldirectord.in
ldirectord/OCF/: Makefile.am  ldirectord.in
ldirectord/init.d/: Makefile.am  ldirectord.debian.default.in  ldirectord.debian.in  ldirectord.in
ldirectord/logrotate.d/: Makefile.am  ldirectord
ldirectord/systemd/: Makefile.am  ldirectord.service.in
rgmanager/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  cleanup.sh  configure  configure.ac  errors.txt  event-script.txt
rgmanager/examples/: cluster.conf  rgmanager.spec.in
rgmanager/include/: Makefile.am  clulog.h  cman-private.h  depends.h  ds.h  event.h  fdops.h  findproc.h  gettid.h  list.h  lock.h  logging.h  mallocdbg.h  members.h  message.h  msgsimple.h  platform.h  pthread_dbg.h  res-ocf.h  resgroup.h  reslist.h  restart_counter.h  rg_locks.h  rg_queue.h  rg_types.h  rmtab.h  sets.h  signals.h  vf.h
rgmanager/init.d/: Makefile  rgmanager  rgmanager.in
rgmanager/make/: defines.mk  defines.mk.input  rgmanager.spec.in
rgmanager/man/: Makefile  cluarp.8  clubufflush.8  clufindhostname.8  clulog.8  clunfsops.8  clurgmgrd.8  clurmtabd.8  clushutdown.8  clustat.8  clusvcadm.8
rgmanager/src/: Makefile  Makefile.am
rgmanager/src/clulib/: Makefile  Makefile.am  alloc.c  ckpt_state.c  clulog.c  cman.c  daemon_init.c  fdops.c  gettid.c  lock.c  lockspace.c  locktest.c  logging.c  mallocdbg.c  members.c  message.c  msg_cluster.c  msg_socket.c  msgsimple.c  msgtest.c  rg_strings.c  sets.c  signals.c  tmgr.c  vft.c  wrap_lock.c
rgmanager/src/daemons/: Makefile  Makefile.am  clurmtabd.c  clurmtabd_lib.c  depends.c  dtest.c  event_config.c  fo_domain.c  groups.c  main.c  members.c  nodeevent.c  reslist.c  resrules.c  restart_counter.c  restree.c  rg_event.c  rg_forward.c  rg_locks.c  rg_queue.c  rg_state.c  rg_thread.c  sbuf.c  service_op.c  slang_event.c  test.c  watchdog.c
rgmanager/src/daemons/tests/: delta-test001-test002.expected  delta-test002-test003.expected  delta-test003-test004.expected  delta-test004-test005.expected  delta-test005-test006.expected  delta-test006-test007.expected  delta-test007-test008.expected  delta-test008-test009.expected  delta-test009-test010.expected  delta-test010-test011.expected  (+70 more)
rgmanager/src/resources/: ASEHAagent.sh  ASEHAagent.sh.in  Makefile  Makefile.am  SAPDatabase  SAPInstance  apache.metadata  apache.sh  apache.sh.in  bind-mount.sh  bind-mount.sh.in  clusterfs.sh  clusterfs.sh.in  db2.sh  db2.sh.in  default_event_script.sl  drbd.sh  drbd.sh.in  follow-service.sl  fs.sh  fs.sh.in  group.sh  ip.sh  ip.sh.in  lvm.metadata  lvm.sh  lvm.sh.in  lvm_by_lv.sh  lvm_by_lv.sh.in  lvm_by_vg.sh  lvm_by_vg.sh.in  mysql.metadata  mysql.sh  mysql.sh.in  nagios.sh  named.metadata  named.sh  named.sh.in  netfs.sh  netfs.sh.in  (+59 more)
rgmanager/src/utils/: Makefile  Makefile.am  cluarp.c  clubufflush.c  clufindhostname.c  clulog.c  clunfslock.sh  clunfsops.c  clushutdown  clustat.c  clusvcadm.c  syscall.h
tools/: Makefile.am  README.sfex  findif-ipcalc  findif.c  nfsconvert.in  ocf-tester.8  ocf-tester.in  send_arp.libnet.c  send_arp.linux.c  send_arp.linux.old.c  sfex.h  sfex_daemon.c  sfex_init.8  sfex_init.c  sfex_lib.c  sfex_lib.h  sfex_stat.c  storage_mon.c  test-findif.sh  tickle_tcp.c  tickle_tcp.h
tools/ocft/: ChangeLog  Filesystem  IPaddr2  IPaddr2v4  IPaddr2v6  IPsrcaddr  IPv6addr  LVM  MailTo  Makefile.am  README  README.in  README.zh_CN  README.zh_CN.in  Raid1  SendArp  VirtualDomain  Xen  Xinetd  apache  caselib.in  db2  drbd.linbit  exportfs  exportfs-multidir  helpers.sh  iscsi  jboss  mysql  mysql-proxy  named  nfsserver  ocft.in  oracle  pgsql  portblock  postfix  runocft  runocft.prereq  sg_persist  (+1 more)
tools/ocft/default/: Filesystem  IPsrcaddr  SendArp  Xinetd  drbd.linbit  iscsi  mysql-proxy  nfsserver
tools/ocft/fedora/: Filesystem  IPaddr2v4  IPaddr2v6  IPsrcaddr  SendArp  Xinetd  apache  mysql  nfsserver  pgsql  tomcat
(+1933 files in other folders)
